Fixed vertical alignment Section.jsx

--- a/src/App.scss
+++ b/src/App.scss
@@ -866,6 +866,7 @@ $card-images: (
 .flex-row {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .infocard-icon-full-boxes {
